CSS changes to enhance Nav readability

--- a/BlazorMovie/Components/UIComponents/SearchComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponent.razor
@@ -8,7 +8,7 @@
     <div class="col-12 d-flex justify-content-end">
 
         <div class="input-group">
-            <select class="form-select" @onchange="NavigateToCategory">
+            <select class="form-select dropdownSelect" @onchange="NavigateToCategory">
                 <option value="">Select Category</option>
                 <option value="MovieByTitle">Movie By Title</option>
                 <option value="PopularMovies">Popular Movies</option>
@@ -24,8 +24,7 @@
             <button class="btn btn-danger border border-2" @onclick="OnClearSearchClick">Clear Search</button>
 
         </div>
-        }
-
+        
     </div>
 
 </div>
