--- a/BlazorMovie/Components/Layout/TopNavMenu.razor
+++ b/BlazorMovie/Components/Layout/TopNavMenu.razor
@@ -1,4 +1,5 @@
-﻿<nav class="navbar navbar-expand-lg navStyle" data-bs-theme="dark">
+﻿@using BlazorMovie.Components.UIComponents.SearchComponents
+<nav class="navbar navbar-expand-lg navStyle" data-bs-theme="dark">
     <div class="container-fluid">
         <a href="/" class="me-3"><img src="/img/smallLogo.png" height="50" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarBM" aria-expanded="false" aria-label="toggle-navigation">
@@ -31,7 +32,7 @@
                     </NavLink>
                   </li>
             </ul>
-        <SearchComponent/>
+        <MainSearchComponent/>
         
         <SearchResultsComponent @ref="searchResultsModal" SearchResults="@searchResults"/>
         </div>
