Split off the dropdown in searchComponent in order to enhance reusability; added css for animation

--- a/BlazorMovie/Components/_Imports.razor
+++ b/BlazorMovie/Components/_Imports.razor
@@ -10,6 +10,7 @@
 @using BlazorMovie.Components
 @using BlazorMovie.Components.Layout
 @using BlazorMovie.Components.UIComponents
+@using BlazorMovie.Components.UIComponents.SearchComponents
 @using BlazorMovie.Models
 @using BlazorMovie.Services
 @using BlazorMovie.Models.Interfaces
