--- a/BlazorMovie/Components/UIComponents/SearchComponents/DropdownComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/DropdownComponent.razor
@@ -1,6 +1,6 @@
 ﻿<div class="@animationClass">
     <select class="form-select dropdownSelect" @onchange="OnCategoryChanged" value="@SelectedCategory">
-        <option value="">Choose Category</option>
+        <option value="">Search</option>
         <option value="MovieByTitle">Movie By Title</option>
         <option value="PopularMovies">Popular Movies</option>
         <option value="TopRated">Top Rated</option>
