--- a/BlazorMovie/Components/Pages/NowPlayingPage.razor
+++ b/BlazorMovie/Components/Pages/NowPlayingPage.razor
@@ -1,5 +1,6 @@
 ﻿@page "/now_playing"
 
+@using System.Text.Json
 @using BlazorMovie.Services
 @using BlazorMovie.Models
 @using BlazorMovie.Models.Interfaces
@@ -7,6 +8,7 @@
 @inject TMDBClient TMDB
 @inject NavigationManager navManager
 @inject IMovieService<NowPlaying> NowPlayingService
+@inject IJSRuntime JSRuntime
 
 <MovieListComponent TMovie="NowPlaying" movies="@movies" Title="Playing Now" OnPageChanged="GetPage" />
 
@@ -22,9 +24,27 @@
 
     protected override async Task OnParametersSetAsync()
     {
+        // Check if data is already in sessionStorage
+        var cachedMoviesJson = await JSRuntime.InvokeAsync<string>("sessionStorageHelper.getItem", $"nowPlayingPage{Page}");
 
-        movies = await NowPlayingService.GetMoviesAsync(Page);
- 
+        if (string.IsNullOrEmpty(cachedMoviesJson))
+        {
+            // No cached data, make the API call
+            movies = await NowPlayingService.GetMoviesAsync(Page);
+
+            // Store the API response in sessionStorage for future use
+            if (movies != null)
+            {
+                // Serialize the entire PageResponse<PopularMovie> object to JSON and store it
+                var moviesJson = JsonSerializer.Serialize(movies);
+                await JSRuntime.InvokeVoidAsync("sessionStorageHelper.setItem", $"nowPlayingPage{Page}", movies);
+            }
+        }
+        else
+        {
+            // Data exists, deserialize the cached data
+            movies = JsonSerializer.Deserialize<PageResponse<NowPlaying>>(cachedMoviesJson);
+        }
     }
 
  
