minor change: added using System.Text.Json

--- a/BlazorMovie/Components/UIComponents/PopularMoviesComponent.razor
+++ b/BlazorMovie/Components/UIComponents/PopularMoviesComponent.razor
@@ -1,4 +1,5 @@
 ﻿@* displayed on the home page *@
+@using System.Text.Json
 @using BlazorMovie.Services
 @using BlazorMovie.Models
 @using BlazorMovie.Models.Interfaces
@@ -35,6 +36,8 @@
             // Store the API response in sessionStorage for future use
             if (movies != null)
             {
+                // Serialize the entire PageResponse<PopularMovie> object to JSON and store it
+                var moviesJson = JsonSerializer.Serialize(movies);
                 await JSRuntime.InvokeVoidAsync("sessionStorageHelper.setItem", $"popularMoviesPage{Page}", movies);
             }
         }
