--- a/BlazorMovie/Components/Pages/TopRatedPage.razor
+++ b/BlazorMovie/Components/Pages/TopRatedPage.razor
@@ -3,11 +3,13 @@
 @using BlazorMovie.Services
 @using BlazorMovie.Models
 @using BlazorMovie.Models.Interfaces
+@using System.Text.Json
 
 @inject TMDBClient TMDB
 @inject NavigationManager navManager
 @inject IMovieService<TopRated> TopRatedService
 @inject IJSRuntime JSRuntime
+
 
 <MovieListComponent TMovie="TopRated" movies="@movies" Title="Top Rated Movies" OnPageChanged="GetPage" />
 
@@ -24,7 +26,6 @@
     {
         // Check if data is already in sessionStorage
         var cachedMoviesJson = await JSRuntime.InvokeAsync<string>("sessionStorageHelper.getItem", $"topRatedPage{Page}");
-        Console.WriteLine(cachedMoviesJson);
 
         if (string.IsNullOrEmpty(cachedMoviesJson))
         {
@@ -35,16 +36,17 @@
             if (movies != null)
             {
                 // Serialize the entire PageResponse<TopRated> object to JSON and store it
-                var moviesJson = System.Text.Json.JsonSerializer.Serialize(movies);
-                await JSRuntime.InvokeVoidAsync("sessionStorageHelper.setItem", $"topRatedPage{Page}", moviesJson);
+                var moviesJson = JsonSerializer.Serialize(movies);
+                await JSRuntime.InvokeVoidAsync("sessionStorageHelper.setItem", $"topRatedPage{Page}", movies);
             }
         }
         else
         {
-            // Data exists, deserialize the cached data into PageResponse<TopRated>
-            movies = System.Text.Json.JsonSerializer.Deserialize<PageResponse<TopRated>>(cachedMoviesJson);
+            // Data exists, deserialize the cached data
+            movies = JsonSerializer.Deserialize<TopRatedPageResponse?>(cachedMoviesJson);
         }
     }
+
 
 
 
