--- a/BlazorMovie/Components/Pages/ComingSoonPage.razor
+++ b/BlazorMovie/Components/Pages/ComingSoonPage.razor
@@ -1,11 +1,12 @@
 ﻿@page "/upcoming"
+@using BlazorMovie.Services.Interfaces
 
 @using BlazorMovie.Models;
 @using BlazorMovie.Models.Interfaces;
 @using BlazorMovie.Services
+@using System.Text.Json
 
 @inject TMDBClient TMDB
-@using System.Text.Json
 @inject NavigationManager navManager
 @inject IMovieService<Upcoming> UpcomingComingSoonService
 @inject IJSRuntime JSRuntime
