--- a/BlazorMovie/Components/UIComponents/PopularMoviesComponent.razor
+++ b/BlazorMovie/Components/UIComponents/PopularMoviesComponent.razor
@@ -1,4 +1,5 @@
-﻿@* displayed on the home page *@
+﻿@using BlazorMovie.Services.Interfaces
+@* displayed on the home page *@
 @using System.Text.Json
 @using BlazorMovie.Services
 @using BlazorMovie.Models
