--- a/BlazorMovie/Components/UIComponents/MovieListComponent.razor
+++ b/BlazorMovie/Components/UIComponents/MovieListComponent.razor
@@ -1,4 +1,4 @@
-﻿@typeparam TMovie where TMovie : IMovie
+﻿@typeparam TMovie where TMovie : Movie
  
 <PageTitle>Movie Pro Wonder - @Title</PageTitle>
 <div class="container-xxl py-3">
