--- a/BlazorMovie/Components/Pages/MovieDetailsPage.razor
+++ b/BlazorMovie/Components/Pages/MovieDetailsPage.razor
@@ -11,84 +11,96 @@
 }
 else
 {
-   <PageTitle>@movieDetails?.Title</PageTitle>
-<!--Page Banner-->
-<div class="hero-bg" style="@($"--bg-img:url(https://image.tmdb.org/t/p/original/{movieDetails?.BackdropPath})")">
-    <div class="hero-container-xxl d-flex flex-column flex-md-row">
-        <!--title content goes here-->
-        <div class="flex-grow-1 d-flex align-items-center justify-content-center justify-content-md-end">
-            <div class="mt-3 text-center text-md-end pe-3">
-                <h1 class="text-light">@movieDetails?.Title?.ToUpper()</h1>
-                <h2 class="text-light">@movieDetails?.Tagline</h2>
-                @if (DateTime.TryParse(movieDetails?.ReleaseDate, out DateTime releaseDate))
-                {
-                    <span class="badge me-2 releaseDate">@releaseDate.ToString("MMM dd, yyyy")</span>
-                }
-                @{
-                    var runtime = movieDetails !=null ? $"{movieDetails?.Runtime / 60}h {movieDetails?.Runtime % 60}m" : "Runtime Not Available";
-                    var rating = movieDetails !=null ? (movieDetails.VoteAverage * 10).ToString("F1"): "Rating Not Available";
-                }
-                <span class="badge me-2 runtime">@runtime</span>
-                <span class="badge me-2 rating">@rating%<i class="bi bi-stars"></i></span>
-                <div class="movie-links">
-                    <div class="d-flex justify-content-center justify-content-md-end p-3">
-                        @if (!string.IsNullOrEmpty(movieDetails?.Homepage))
-                        {
-                            <div class="text-center px-2">
-                                <a href="@movieDetails.Homepage" target="_blank" class="btn btn-outline-light rounded-pill">Website</a>
-                            </div>
-                        }
-                        @if (!string.IsNullOrEmpty(movieDetails?.ImdbId))
-                        {
-                            <div class="text-center px-2">
-                                <a href="@($"https://www.imdb.com/title/{movieDetails.ImdbId}")" target="_blank" class="btn btn-outline-warning rounded-pill">IMDB</a>
-                            </div>
-                        }
+    <PageTitle>@movieDetails?.Title</PageTitle>
+    <!--Page Banner-->
+    <div class="hero-bg" style="@($"--bg-img:url(https://image.tmdb.org/t/p/original/{movieDetails?.BackdropPath})")">
+        <div class="hero-container-xxl d-flex flex-column flex-md-row">
+            <!--title content goes here-->
+            <div class="flex-grow-1 d-flex align-items-center justify-content-center justify-content-md-end">
+                <div class="mt-3 text-center text-md-end pe-3">
+                    <h1 class="text-light">@movieDetails?.Title?.ToUpper()</h1>
+                    <h2 class="text-light">@movieDetails?.Tagline</h2>
+                    @if (DateTime.TryParse(movieDetails?.ReleaseDate, out DateTime releaseDate))
+                    {
+                        <span class="badge me-2 releaseDate" title="Release Date">@releaseDate.ToString("MMM dd, yyyy")</span>
+                    }
+                    @{
+                        var runtime = movieDetails !=null ? $"{movieDetails?.Runtime / 60}h {movieDetails?.Runtime % 60}m" : "Runtime Not Available";
+                        var rating = movieDetails !=null ? (movieDetails.VoteAverage * 10).ToString("F1"): "Rating Not Available";
+                    }
+                    <span class="badge me-2 runtime" title="Movie Runtime">@runtime</span>
+                    <span class="badge me-2 rating" title="Movie Rating">@rating%<i class="bi bi-stars"></i></span>
+                    <div class="movie-links">
+                        <div class="d-flex justify-content-center justify-content-md-end p-3">
+                            @if (!string.IsNullOrEmpty(movieDetails?.Homepage))
+                            {
+                                @if (isLinkAvailable == true)
+                                {
+                                    <div class="text-center px-2">
+
+                                        <a href="@movieDetails.Homepage" target="_blank" class="btn btn-outline-light rounded-pill">Website</a>
+                                    </div>
+                                }
+                                else if (isLinkAvailable == false)
+                                {
+                                    <div class="text-center px-2">
+                                        <button class="btn btn-outline-light rounded-pill" title="Website not found" disabled>Website Unavailable</button>
+                                    </div>
+                                }
+                                else
+                                {
+                                    <div class="text-center px-2">
+                                        <span>Checking link...</span>
+                                    </div>
+                                }
+                            }
+                            @if (!string.IsNullOrEmpty(movieDetails?.ImdbId))
+                            {
+                                <div class="text-center px-2">
+                                    <a href="@($"https://www.imdb.com/title/{movieDetails.ImdbId}")" target="_blank" class="btn btn-outline-warning rounded-pill">IMDB</a>
+                                </div>
+                            }
+                        </div>
+
                     </div>
 
                 </div>
-
             </div>
-        </div>
-        <!--poster goes here-->
-        <div class="order-last order-md-first d-flex justify-content-center">
-            <div class="poster-container">
-                @if (string.IsNullOrEmpty(movieDetails?.PosterPath))
-                {
-                    <img src="/img/PosterPlaceHolder.png" alt="Movie Poster" />
-                }
-                else
-                {
-                    <img src="@($"https://image.tmdb.org/t/p/w500/{movieDetails.PosterPath}")" alt="@movieDetails.Title" class="img-fluid rounded shadow-lg" />
-                }
+            <!--poster goes here-->
+            <div class="order-last order-md-first d-flex justify-content-center">
+                <div class="poster-container">
+                    @if (string.IsNullOrEmpty(movieDetails?.PosterPath))
+                    {
+                        <img src="/img/PosterPlaceHolder.png" alt="Movie Poster" />
+                    }
+                    else
+                    {
+                        <img src="@($"https://image.tmdb.org/t/p/w500/{movieDetails.PosterPath}")" alt="@movieDetails.Title" class="img-fluid rounded shadow-lg" />
+                    }
 
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="container-xxl">
-    <div class="overview d-flex flex-column">
-        <p>@movieDetails?.Overview</p>
-        @if (movieDetails.SpokenLanguages.Any())
-        {
-            <div>
-                <strong> Languages:</strong> @string.Join(", ", movieDetails.SpokenLanguages.Select(sl => sl.EnglishName))
-            </div>
-        }
-        else
-        {
-            <div>
-                <strong> Languages:</strong> Not Available
-            </div>
-        }
+    <div class="container-xxl">
+        <div class="overview d-flex flex-column">
+            <p>@movieDetails?.Overview</p>
+            @if (movieDetails.SpokenLanguages.Any())
+            {
+                <div>
+                    <strong> Languages:</strong> @string.Join(", ", movieDetails.SpokenLanguages.Select(sl => sl.EnglishName))
+                </div>
+            }
+            else
+            {
+                <div>
+                    <strong> Languages:</strong> Not Available
+                </div>
+            }
 
+        </div>
     </div>
-</div>
-
-    
 }
-
-
 
 @code {
 
@@ -96,9 +108,39 @@ else
     public int Id { get; set; }
 
     private MovieDetails? movieDetails;
+    private bool? isLinkAvailable;
 
     protected override async Task OnInitializedAsync()
     {
         movieDetails = await TMDB.GetMovieDetailsAsync(Id);
+    }
+    
+    protected override async Task OnParametersSetAsync()
+    {
+        if (!string.IsNullOrEmpty(movieDetails.Homepage))
+        {
+            isLinkAvailable = await IsLinkAvailable(movieDetails.Homepage);
+        }
+        else
+        {
+            isLinkAvailable = false;
+        }
+    }
+
+    private async Task<bool> IsLinkAvailable(string url)
+    {
+        if (string.IsNullOrEmpty(url))
+            return false;
+
+        try
+        {
+            using var httpClient = new HttpClient();
+            var response = await httpClient.GetAsync(url);
+            return response.IsSuccessStatusCode;
+        }
+        catch
+        {
+            return false;
+        }
     }
 }
